[gd_scene format=3 uid="uid://kgd7xcqu3pab"]

[ext_resource type="Script" uid="uid://bpuwo3twdi52b" path="res://pz_file_loader/scripts/folder_selector.gd" id="1_t3ftf"]

[node name="FolderSelector" type="Control" unique_id=1461144930]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 4
script = ExtResource("1_t3ftf")

[node name="ColorRect" type="ColorRect" parent="." unique_id=874686664]
layout_mode = 1
color = Color(0, 0, 0, 0.49803922)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=912678952]
layout_mode = 1
offset_right = 20.0
offset_bottom = 47.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=1512843277]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=1485045077]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=2140471670]
layout_mode = 2

[node name="MessageLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=892775308]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=491517794]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=539316246]
layout_mode = 2

[node name="BrowseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=84581218]
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1671120885]
layout_mode = 2
